[package]
name = "topk"
version = "0.2.1"
authors = ["NewbieOrange <yutiancheng1999@gmail.com>"]
description = "TopK algorithm implementation in Rust"
readme = "README.md"
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/NewbieOrange/topk"
license = "MIT"
keywords = ["topk", "space_saving"]
categories = ["algorithms", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
priority-queue = "1.3"
