[package]
name = "topk"
version = "0.7.0"
authors = ["NewbieOrange <yutiancheng1999@gmail.com>"]
description = "TopK algorithm implementation in Rust"
readme = "README.md"
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/NewbieOrange/topk"
license = "MIT"
keywords = ["topk", "space_saving"]
categories = ["algorithms", "data-structures"]

[dependencies]
ahash = "0.8"
priority-queue = "2.5.0"
serde = { version = "1", features = ["derive"], optional = true }
rustc-stable-hash = { version = "0.1", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:rustc-stable-hash", "priority-queue/serde"]

[dev-dependencies]
proptest = "1.1.0"
serde_json = "1"
criterion = "0.5"

[[bench]]
name = "hasher_comparison"
harness = false
